--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
              <button onclick="take_snapshot()" class="btn btn-warning">Capture Image</button>
            </div>
            <div class="col-md-4 col-sm-12 col-xs-12">
-             <label>Prediction 1 - </label>
+             <label>Identified - </label>
              <p class="emotionName" id="resultEmotionName"></p>
              <p class="emoji" id="updateEmoji"></p>
            </div>
